// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppLoader component should have a proper style generator 1`] = `
Object {
  "appLoader": Object {
    "alignItems": "center",
    "display": "flex",
    "height": "100%",
    "justifyContent": "center",
    "test1": "test1",
    "test2": "test2",
    "test3": "test3",
    "textAlign": "center !important",
    "width": "100%",
  },
  "logo": Object {
    "width": 200,
  },
  "spaceBetween": Object {
    "margin": "16px 0",
  },
  "white": Object {
    "color": "test4",
    "fontWeight": "test5",
  },
}
`;

exports[`AppLoader component should have a proper style generator 2`] = `
Object {
  "appLoader": Object {
    "alignItems": "center",
    "display": "flex",
    "height": "100%",
    "justifyContent": "center",
    "textAlign": "center !important",
    "width": "100%",
  },
  "logo": Object {
    "width": 200,
  },
  "spaceBetween": Object {
    "margin": "16px 0",
  },
  "white": Object {
    "color": "test4",
    "fontWeight": "test5",
  },
}
`;

exports[`AppLoader component should have a proper style generator 3`] = `
Object {
  "appLoader": Object {
    "alignItems": "center",
    "display": "flex",
    "height": "100%",
    "justifyContent": "center",
    "textAlign": "center !important",
    "width": "100%",
  },
  "logo": Object {
    "width": 200,
  },
  "spaceBetween": Object {
    "margin": "16px 0",
  },
  "white": Object {
    "color": undefined,
    "fontWeight": "test5",
  },
}
`;

exports[`AppLoader component should have a proper style generator 4`] = `
Object {
  "appLoader": Object {
    "alignItems": "center",
    "display": "flex",
    "height": "100%",
    "justifyContent": "center",
    "textAlign": "center !important",
    "width": "100%",
  },
  "logo": Object {
    "width": 200,
  },
  "spaceBetween": Object {
    "margin": "16px 0",
  },
  "white": Object {
    "color": undefined,
    "fontWeight": undefined,
  },
}
`;
